Texture paint mode crash #59799

Closed
opened 2018-12-23 22:07:55 +01:00 by Zino Guerr · 37 comments

System Information
Windows 10 64bits GTX 1050 TI latest driver

Blender Version
Broken:
2.80.39 hash:6b13f10d40e5 2018-12-23.

Short description of error
crash with adding new mesh to the scene then switching to texture painting.
Exact steps for others to reproduce the error

1 - either add new mesh like plane,cube..etc or delete everything then add new mesh.
2 - switch to texture paint workspace.

**System Information** Windows 10 64bits GTX 1050 TI latest driver **Blender Version** Broken: 2.80.39 hash:6b13f10d40e5 2018-12-23. **Short description of error** crash with adding new mesh to the scene then switching to texture painting. **Exact steps for others to reproduce the error** 1 - either add new mesh like plane,cube..etc or delete everything then add new mesh. 2 - switch to texture paint workspace.
Author

Added subscriber: @Znio.G

Added subscriber: @Znio.G

#59906 was marked as duplicate of this issue

#59906 was marked as duplicate of this issue

#59941 was marked as duplicate of this issue

#59941 was marked as duplicate of this issue

#59876 was marked as duplicate of this issue

#59876 was marked as duplicate of this issue

#59859 was marked as duplicate of this issue

#59859 was marked as duplicate of this issue

#59617 was marked as duplicate of this issue

#59617 was marked as duplicate of this issue

#59737 was marked as duplicate of this issue

#59737 was marked as duplicate of this issue

#59847 was marked as duplicate of this issue

#59847 was marked as duplicate of this issue

#59805 was marked as duplicate of this issue

#59805 was marked as duplicate of this issue

#59793 was marked as duplicate of this issue

#59793 was marked as duplicate of this issue

#59800 was marked as duplicate of this issue

#59800 was marked as duplicate of this issue

Added subscriber: @brhumphe

Added subscriber: @brhumphe

Confirmed on e5e885d0ec.

Confirmed on e5e885d0ecb9.

Added subscribers: @rafiq_chai, @capnm, @StephenSwaney

Added subscribers: @rafiq_chai, @capnm, @StephenSwaney
Brecht Van Lommel changed title from crash with texture paint workspace. to Texture paint mode crash 2018-12-24 00:11:43 +01:00

This issue was referenced by 28520e9652

This issue was referenced by 28520e9652df2264bacf1f1f25ab657384d8817a

Added subscriber: @qwiglydee

Added subscriber: @qwiglydee

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @brecht

Added subscriber: @brecht

I couldn't reproduce this myself, but committed a fix for the GLSL error. Hopefully that fixes it, if not we can reopen the bug.

I couldn't reproduce this myself, but committed a fix for the GLSL error. Hopefully that fixes it, if not we can reopen the bug.

@brecht as far I understand, that isn't fix for this crash.
I can 100% reproduce that e.g. with

  • start Blender with the factory settings
  • delete the default cube
  • add a new cube or another mesh
  • switch to the texture paint mode
  • crash

410142caff:

# Blender 2.80 (sub 39), Commit date: 2018-12-24 11:40, Hash 410142caffd1
bpy.ops.object.delete(use_global=False)  # Operator
Deleted 1 object(s)  # Info
bpy.ops.mesh.primitive_torus_add(view_align=False, location=(0, 0, 0), rotation=(0, 0, 0), major_radius=1, minor_radius=0.25, abso_major_rad=1.25, abso_minor_rad=0.75)  # Operator
bpy.ops.paint.texture_paint_toggle()  # Operator

# backtrace
blender8tip(BLI_system_backtrace+0x33) [0x55d9abfad5b3]
blender8tip(+0x1174ac0) [0x55d9ab506ac0]
/lib/x86_64-linux-gnu/libc.so.6(+0x3ef20) [0x7f21196d7f20]
blender8tip(DRW_shgroup_call_add+0x64) [0x55d9abb38864]
blender8tip(+0x17b9295) [0x55d9abb4b295]
blender8tip(+0x17a2821) [0x55d9abb34821]
blender8tip(DRW_draw_render_loop_ex+0x223) [0x55d9abb35c43]
blender8tip(view3d_main_region_draw+0x77) [0x55d9ab5ea677]
blender8tip(ED_region_do_draw+0x4f9) [0x55d9ab81aa39]
blender8tip(wm_draw_update+0x3f1) [0x55d9ab509471]
blender8tip(WM_main+0x30) [0x55d9ab5075a0]
blender8tip(main+0x351) [0x55d9ab4babc1]
/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xe7) [0x7f21196bab97]
blender8tip(_start+0x2a) [0x55d9ab5031ca]

Running releasedebug in the gdb:

Thread 1 "blender8tip" received signal SIGSEGV, Segmentation fault.
drw_call_state_create (obmat=obmat@entry=0x7fffaf04dee0, ob=ob@entry=0x0, shgroup=<optimized out>)
    at source/blender/draw/intern/draw_manager_data.c:358
358				random = BLI_hash_int_2d(BLI_hash_string(ob->id.name + 2), 0);


(gdb) l
353				random = GMS.dob->random_id;
354			}
355			else
356	#endif
357			{
-> 358				random = BLI_hash_int_2d(BLI_hash_string(ob->id.name + 2), 0);
359			}
360			state->objectinfo[1] = random * (1.0f / (float)0xFFFFFFFF);
361			state->matflag &= ~DRW_CALL_OBJECTINFO;
362		}


(gdb) bt
#0  0x0000555556cf9fd7 in drw_call_state_create (obmat=obmat@entry=0x7fffaf04dee0, ob=ob@entry=0x0, shgroup=<optimized out>)
    at source/blender/draw/intern/draw_manager_data.c:358
#1  0x0000555556cfa838 in DRW_shgroup_call_add (shgroup=0x7fffaf1c51a0, geom=0x7fffabd723e8, obmat=0x7fffaf04dee0)
    at source/blender/draw/intern/draw_manager_data.c:386
#2  0x0000555556d0d295 in PAINT_TEXTURE_cache_populate (vedata=<optimized out>, ob=0x7fffaf04dc08)
    at source/blender/draw/modes/paint_texture_mode.c:288
- 3  0x0000555556cf6821 in drw_engines_cache_populate (ob=0x7fffaf04dc08) at source/blender/draw/intern/draw_manager.c:1017
- 4  0x0000555556cf7c43 in DRW_draw_render_loop_ex (depsgraph=0x7fffcc7fcd08, engine_type=<optimized out>, ar=0x7fffcc08a8c8, v3d=0x7fffcde8d008, viewport=0x7fffaee83608, evil_C=evil_C@entry=0x7fffce86d408) at source/blender/draw/intern/draw_manager.c:1483
- 5  0x0000555556cf81bb in DRW_draw_view (C=C@entry=0x7fffce86d408) at source/blender/draw/intern/draw_manager.c:1409
- 6  0x00005555567ac677 in view3d_draw_view (ar=0x7fffcc08a8c8, C=0x7fffce86d408) at source/blender/editors/space_view3d/view3d_draw.c:1333
- 7  0x00005555567ac677 in view3d_main_region_draw (C=0x7fffce86d408, ar=0x7fffcc08a8c8) at source/blender/editors/space_view3d/view3d_draw.c:1354
- 8  0x00005555569dca39 in ED_region_do_draw (C=C@entry=0x7fffce86d408, ar=ar@entry=0x7fffcc08a8c8) at source/blender/editors/screen/area.c:567
#9  0x00005555566cb471 in wm_draw_window_offscreen (stereo=false, win=0x7fffcc7ede88, C=0x7fffce86d408)
    at source/blender/windowmanager/intern/wm_draw.c:580
- 10 0x00005555566cb471 in wm_draw_window (win=0x7fffcc7ede88, C=0x7fffce86d408) at source/blender/windowmanager/intern/wm_draw.c:712
- 11 0x00005555566cb471 in wm_draw_update (C=C@entry=0x7fffce86d408) at source/blender/windowmanager/intern/wm_draw.c:866
- 12 0x00005555566c95a0 in WM_main (C=0x7fffce86d408) at source/blender/windowmanager/intern/wm.c:433
- 13 0x000055555667cbc1 in main (argc=1, argv=0x7fffffffdcf8) at source/creator/creator.c:521

See also my comment in https://developer.blender.org/T59793#587346

@brecht as far I understand, that isn't fix for this crash. I can 100% reproduce that e.g. with * start Blender with the factory settings * delete the default cube * add a new cube or another mesh * switch to the texture paint mode * crash 410142caff: ``` # Blender 2.80 (sub 39), Commit date: 2018-12-24 11:40, Hash 410142caffd1 bpy.ops.object.delete(use_global=False) # Operator Deleted 1 object(s) # Info bpy.ops.mesh.primitive_torus_add(view_align=False, location=(0, 0, 0), rotation=(0, 0, 0), major_radius=1, minor_radius=0.25, abso_major_rad=1.25, abso_minor_rad=0.75) # Operator bpy.ops.paint.texture_paint_toggle() # Operator # backtrace blender8tip(BLI_system_backtrace+0x33) [0x55d9abfad5b3] blender8tip(+0x1174ac0) [0x55d9ab506ac0] /lib/x86_64-linux-gnu/libc.so.6(+0x3ef20) [0x7f21196d7f20] blender8tip(DRW_shgroup_call_add+0x64) [0x55d9abb38864] blender8tip(+0x17b9295) [0x55d9abb4b295] blender8tip(+0x17a2821) [0x55d9abb34821] blender8tip(DRW_draw_render_loop_ex+0x223) [0x55d9abb35c43] blender8tip(view3d_main_region_draw+0x77) [0x55d9ab5ea677] blender8tip(ED_region_do_draw+0x4f9) [0x55d9ab81aa39] blender8tip(wm_draw_update+0x3f1) [0x55d9ab509471] blender8tip(WM_main+0x30) [0x55d9ab5075a0] blender8tip(main+0x351) [0x55d9ab4babc1] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xe7) [0x7f21196bab97] blender8tip(_start+0x2a) [0x55d9ab5031ca] ``` Running releasedebug in the gdb: ``` Thread 1 "blender8tip" received signal SIGSEGV, Segmentation fault. drw_call_state_create (obmat=obmat@entry=0x7fffaf04dee0, ob=ob@entry=0x0, shgroup=<optimized out>) at source/blender/draw/intern/draw_manager_data.c:358 358 random = BLI_hash_int_2d(BLI_hash_string(ob->id.name + 2), 0); (gdb) l 353 random = GMS.dob->random_id; 354 } 355 else 356 #endif 357 { -> 358 random = BLI_hash_int_2d(BLI_hash_string(ob->id.name + 2), 0); 359 } 360 state->objectinfo[1] = random * (1.0f / (float)0xFFFFFFFF); 361 state->matflag &= ~DRW_CALL_OBJECTINFO; 362 } (gdb) bt #0 0x0000555556cf9fd7 in drw_call_state_create (obmat=obmat@entry=0x7fffaf04dee0, ob=ob@entry=0x0, shgroup=<optimized out>) at source/blender/draw/intern/draw_manager_data.c:358 #1 0x0000555556cfa838 in DRW_shgroup_call_add (shgroup=0x7fffaf1c51a0, geom=0x7fffabd723e8, obmat=0x7fffaf04dee0) at source/blender/draw/intern/draw_manager_data.c:386 #2 0x0000555556d0d295 in PAINT_TEXTURE_cache_populate (vedata=<optimized out>, ob=0x7fffaf04dc08) at source/blender/draw/modes/paint_texture_mode.c:288 - 3 0x0000555556cf6821 in drw_engines_cache_populate (ob=0x7fffaf04dc08) at source/blender/draw/intern/draw_manager.c:1017 - 4 0x0000555556cf7c43 in DRW_draw_render_loop_ex (depsgraph=0x7fffcc7fcd08, engine_type=<optimized out>, ar=0x7fffcc08a8c8, v3d=0x7fffcde8d008, viewport=0x7fffaee83608, evil_C=evil_C@entry=0x7fffce86d408) at source/blender/draw/intern/draw_manager.c:1483 - 5 0x0000555556cf81bb in DRW_draw_view (C=C@entry=0x7fffce86d408) at source/blender/draw/intern/draw_manager.c:1409 - 6 0x00005555567ac677 in view3d_draw_view (ar=0x7fffcc08a8c8, C=0x7fffce86d408) at source/blender/editors/space_view3d/view3d_draw.c:1333 - 7 0x00005555567ac677 in view3d_main_region_draw (C=0x7fffce86d408, ar=0x7fffcc08a8c8) at source/blender/editors/space_view3d/view3d_draw.c:1354 - 8 0x00005555569dca39 in ED_region_do_draw (C=C@entry=0x7fffce86d408, ar=ar@entry=0x7fffcc08a8c8) at source/blender/editors/screen/area.c:567 #9 0x00005555566cb471 in wm_draw_window_offscreen (stereo=false, win=0x7fffcc7ede88, C=0x7fffce86d408) at source/blender/windowmanager/intern/wm_draw.c:580 - 10 0x00005555566cb471 in wm_draw_window (win=0x7fffcc7ede88, C=0x7fffce86d408) at source/blender/windowmanager/intern/wm_draw.c:712 - 11 0x00005555566cb471 in wm_draw_update (C=C@entry=0x7fffce86d408) at source/blender/windowmanager/intern/wm_draw.c:866 - 12 0x00005555566c95a0 in WM_main (C=0x7fffce86d408) at source/blender/windowmanager/intern/wm.c:433 - 13 0x000055555667cbc1 in main (argc=1, argv=0x7fffffffdcf8) at source/creator/creator.c:521 ``` See also my comment in https://developer.blender.org/T59793#587346

Added subscribers: @charlieha2122, @mont29

Added subscribers: @charlieha2122, @mont29

Added subscriber: @StephenSohng

Added subscriber: @StephenSohng

Added subscriber: @dbrgn

Added subscriber: @dbrgn

Added subscriber: @TakeshiFunahashi

Added subscriber: @TakeshiFunahashi

I still see same crash (windows 10 PC)
with default factory setting. So please open one of these cursh texture paint topic.

version: 2.80 (sub 39), branch: master, commit date: 2018-12-25 16:36, hash: 60b930af3e, type:
build date: 2018/12/26, 17:41
platform: Windows

debug log

ED_screen_refresh: set screen
DEG::`anonymous-namespace'::deg_graph_id_tag_update: id=MECube flags=COPY_ON_WRITE
DEG::`anonymous-namespace'::deg_graph_id_tag_update: id=MECube flags=COPY_ON_WRITE
wm_event_do_notifiers: Workspace set 000001E1F5EB7118
[SCScene :: View Layer]: Operation is entry point for update: COPY_ON_WRITE()
[SCScene :: View Layer]: Accumulated recalc bits for OBCube: 130
[SCScene :: View Layer]: Accumulated recalc bits for MECube: 130
[SCScene :: View Layer]: DEG::deg_evaluate_copy_on_write on MECube (000001E1FEEBBA28)
[SCScene :: View Layer]: DEG::deg_evaluate_copy_on_write on OBCube (000001E1FF563578)
[SCScene :: View Layer]: BKE_mesh_eval_geometry on MECube (000001E1FEEBBA28)
[SCScene :: View Layer]: BKE_object_eval_uber_data on OBCube (000001E1FF563578)
[SCScene :: View Layer]: BKE_object_handle_data_update on OBCube (000001E1FF563578)
Depsgraph updated in 0.017493 seconds.
UI_menutype_draw: opening menu "TOPBAR_MT_editor_menus"
UI_menutype_draw: opening menu "MASK_MT_editor_menus"
UI_menutype_draw: opening menu "VIEW3D_MT_editor_menus"
Shader file written to disk: C:\Users\TAKE\AppData\Local\Temp\blender_a08488\0086.vert
Shader file written to disk: C:\Users\TAKE\AppData\Local\Temp\blender_a08488\0086.frag
Shader file written to disk: C:\Users\TAKE\AppData\Local\Temp\blender_a08488\0087.vert
Shader file written to disk: C:\Users\TAKE\AppData\Local\Temp\blender_a08488\0087.frag
Shader file written to disk: C:\Users\TAKE\AppData\Local\Temp\blender_a08488\0088.vert
Shader file written to disk: C:\Users\TAKE\AppData\Local\Temp\blender_a08488\0088.frag
Error   : EXCEPTION_ACCESS_VIOLATION
Address : 0x00007FF79178BF49
Module  : C:\myprograms\blender-git\build_windows_Release_x64_vc15_Release\bin\Release\blender.exe
I still see same crash (windows 10 PC) with default factory setting. So please open one of these cursh texture paint topic. version: 2.80 (sub 39), branch: master, commit date: 2018-12-25 16:36, hash: 60b930af3e73, type: build date: 2018/12/26, 17:41 platform: Windows debug log ``` ED_screen_refresh: set screen DEG::`anonymous-namespace'::deg_graph_id_tag_update: id=MECube flags=COPY_ON_WRITE DEG::`anonymous-namespace'::deg_graph_id_tag_update: id=MECube flags=COPY_ON_WRITE wm_event_do_notifiers: Workspace set 000001E1F5EB7118 [SCScene :: View Layer]: Operation is entry point for update: COPY_ON_WRITE() [SCScene :: View Layer]: Accumulated recalc bits for OBCube: 130 [SCScene :: View Layer]: Accumulated recalc bits for MECube: 130 [SCScene :: View Layer]: DEG::deg_evaluate_copy_on_write on MECube (000001E1FEEBBA28) [SCScene :: View Layer]: DEG::deg_evaluate_copy_on_write on OBCube (000001E1FF563578) [SCScene :: View Layer]: BKE_mesh_eval_geometry on MECube (000001E1FEEBBA28) [SCScene :: View Layer]: BKE_object_eval_uber_data on OBCube (000001E1FF563578) [SCScene :: View Layer]: BKE_object_handle_data_update on OBCube (000001E1FF563578) Depsgraph updated in 0.017493 seconds. UI_menutype_draw: opening menu "TOPBAR_MT_editor_menus" UI_menutype_draw: opening menu "MASK_MT_editor_menus" UI_menutype_draw: opening menu "VIEW3D_MT_editor_menus" Shader file written to disk: C:\Users\TAKE\AppData\Local\Temp\blender_a08488\0086.vert Shader file written to disk: C:\Users\TAKE\AppData\Local\Temp\blender_a08488\0086.frag Shader file written to disk: C:\Users\TAKE\AppData\Local\Temp\blender_a08488\0087.vert Shader file written to disk: C:\Users\TAKE\AppData\Local\Temp\blender_a08488\0087.frag Shader file written to disk: C:\Users\TAKE\AppData\Local\Temp\blender_a08488\0088.vert Shader file written to disk: C:\Users\TAKE\AppData\Local\Temp\blender_a08488\0088.frag Error : EXCEPTION_ACCESS_VIOLATION Address : 0x00007FF79178BF49 Module : C:\myprograms\blender-git\build_windows_Release_x64_vc15_Release\bin\Release\blender.exe ```

Added subscriber: @ixd

Added subscriber: @ixd

*Duplicate of my comment from another similar bug report (sorry, I haven't seen this thread before)//
Can confirm (OS: Win 10, blender: 60b930af3e). Blender also crashes in the following scenario:

  • Add grid with default settings.
  • Add Dynamic Paint -> Add Canvas
  • Change 3D View to Texture Paint
  • Crash

Console output:

Error   : EXCEPTION_ACCESS_VIOLATION
Address : 0x00007FF7C57C2879
Module  : <path to blender>\blender.exe

Excerpt from WinDbg Output:

FAULTING_IP: 
blender!openvdb::v5_1::io::Archive::compression+dd9
00007ff7`c57c2879 0fb78b84000000  movzx   ecx,word ptr [rbx+84h]

EXCEPTION_RECORD:  (.exr -1)
ExceptionAddress: 00007ff7c57c2879 (blender!openvdb::v5_1::io::Archive::compression+0x0000000000000dd9)
   ExceptionCode: c0000005 (Access violation)
  ExceptionFlags: 00000000
NumberParameters: 2
   Parameter[0]: 0000000000000000
   Parameter[1]: ffffffffffffffff
Attempt to read from address ffffffffffffffff

BUGCHECK_STR:  APPLICATION_FAULT_INVALID_POINTER_READ

0:000> k
 # Child-SP          RetAddr           Call Site
00 000000d3`a77feeb0 00007ff7`c57c117d blender!openvdb::v5_1::io::Archive::compression+0xdd9
01 000000d3`a77fef20 00007ff7`c57e6ce7 blender!openvdb::v5_1::math::NonlinearFrustumMap::secondMap+0x1b78d
02 000000d3`a77fef50 00007ff7`c57afc7f blender!openvdb::v5_1::io::Archive::compression+0x25247
03 000000d3`a77fefa0 00007ff7`c57aca85 blender!openvdb::v5_1::math::NonlinearFrustumMap::secondMap+0xa28f
04 000000d3`a77fefe0 00007ff7`c57ad78e blender!openvdb::v5_1::math::NonlinearFrustumMap::secondMap+0x7095
05 000000d3`a77ff750 00007ff7`c52e98af blender!openvdb::v5_1::math::NonlinearFrustumMap::secondMap+0x7d9e
06 000000d3`a77ff7a0 00007ff7`c550b0bb blender!openvdb::v5_1::compression::PagedInputStream::getInputStream+0x8f20f
07 000000d3`a77ff800 00007ff7`c522d3b1 blender!openvdb::v5_1::tree::TreeBase::memUsage+0xecafb
08 000000d3`a77ff8f0 00007ff7`c522cefa blender+0x2bd3b1
09 000000d3`a77ff970 00007ff7`c522cc6b blender+0x2bcefa
0a 000000d3`a77ff9c0 00007ff7`c520b150 blender+0x2bcc6b
0b 000000d3`a77ff9f0 00007ff7`c5207037 blender+0x29b150
0c 000000d3`a77ffa20 00007ff7`c747da1c blender+0x297037
0d 000000d3`a77ffaa0 00007ffa`d9c47e94 blender!xmlUCSIsCat+0x5137bc
0e 000000d3`a77ffae0 00007ffa`dc99a251 KERNEL32!BaseThreadInitThunk+0x14
0f 000000d3`a77ffb10 00000000`00000000 ntdll!RtlUserThreadStart+0x21
*Duplicate of my comment from [another ](https:*developer.blender.org/T59859) similar bug report (sorry, I haven't seen this thread before)// Can confirm (OS: Win 10, blender: 60b930af3e73). Blender also crashes in the following scenario: - Add grid with default settings. - Add **Dynamic Paint** -> **Add Canvas** - Change 3D View to **Texture Paint** - Crash Console output: ``` Error : EXCEPTION_ACCESS_VIOLATION Address : 0x00007FF7C57C2879 Module : <path to blender>\blender.exe ``` Excerpt from WinDbg Output: ``` FAULTING_IP: blender!openvdb::v5_1::io::Archive::compression+dd9 00007ff7`c57c2879 0fb78b84000000 movzx ecx,word ptr [rbx+84h] EXCEPTION_RECORD: (.exr -1) ExceptionAddress: 00007ff7c57c2879 (blender!openvdb::v5_1::io::Archive::compression+0x0000000000000dd9) ExceptionCode: c0000005 (Access violation) ExceptionFlags: 00000000 NumberParameters: 2 Parameter[0]: 0000000000000000 Parameter[1]: ffffffffffffffff Attempt to read from address ffffffffffffffff BUGCHECK_STR: APPLICATION_FAULT_INVALID_POINTER_READ 0:000> k # Child-SP RetAddr Call Site 00 000000d3`a77feeb0 00007ff7`c57c117d blender!openvdb::v5_1::io::Archive::compression+0xdd9 01 000000d3`a77fef20 00007ff7`c57e6ce7 blender!openvdb::v5_1::math::NonlinearFrustumMap::secondMap+0x1b78d 02 000000d3`a77fef50 00007ff7`c57afc7f blender!openvdb::v5_1::io::Archive::compression+0x25247 03 000000d3`a77fefa0 00007ff7`c57aca85 blender!openvdb::v5_1::math::NonlinearFrustumMap::secondMap+0xa28f 04 000000d3`a77fefe0 00007ff7`c57ad78e blender!openvdb::v5_1::math::NonlinearFrustumMap::secondMap+0x7095 05 000000d3`a77ff750 00007ff7`c52e98af blender!openvdb::v5_1::math::NonlinearFrustumMap::secondMap+0x7d9e 06 000000d3`a77ff7a0 00007ff7`c550b0bb blender!openvdb::v5_1::compression::PagedInputStream::getInputStream+0x8f20f 07 000000d3`a77ff800 00007ff7`c522d3b1 blender!openvdb::v5_1::tree::TreeBase::memUsage+0xecafb 08 000000d3`a77ff8f0 00007ff7`c522cefa blender+0x2bd3b1 09 000000d3`a77ff970 00007ff7`c522cc6b blender+0x2bcefa 0a 000000d3`a77ff9c0 00007ff7`c520b150 blender+0x2bcc6b 0b 000000d3`a77ff9f0 00007ff7`c5207037 blender+0x29b150 0c 000000d3`a77ffa20 00007ff7`c747da1c blender+0x297037 0d 000000d3`a77ffaa0 00007ffa`d9c47e94 blender!xmlUCSIsCat+0x5137bc 0e 000000d3`a77ffae0 00007ffa`dc99a251 KERNEL32!BaseThreadInitThunk+0x14 0f 000000d3`a77ffb10 00000000`00000000 ntdll!RtlUserThreadStart+0x21 ```
Author

@brecht it still crashes when adding new geo or importing fbx, but only importing Obj doesn't crash.

@brecht it still crashes when adding new geo or importing fbx, but only importing Obj doesn't crash.

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Added subscribers: @Jaye.Antoni_Whyldz, @fclem, @insanerob, @forcef, @Baron2020, @ZedDB, @spinear

Added subscribers: @eklektikal, @Zelo101

Added subscribers: @eklektikal, @Zelo101

Added subscriber: @Flamti

Added subscriber: @Flamti

This issue was referenced by 097b9019ce

This issue was referenced by 097b9019ceea7e0c9ef399b548dc917b8525c02e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

@brecht thanks, it's fixed now.

@brecht thanks, it's fixed now.

Added subscriber: @carlosjorgereis

Added subscriber: @carlosjorgereis

Added subscriber: @Ms_Foxy_Winters

Added subscriber: @Ms_Foxy_Winters
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
9 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59799
No description provided.