Fix T59799: texture paint mode crash for object with no materials.